# reader-rs

./: .gitignore  Cargo.toml  README.md
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/tasks/04-25-ereader-brainstorm/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/04-26-spread-view/: implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-04/00-bootstrap-guidelines/: task.json
.trellis/tasks/archive/2026-04/04-25-ereader-brainstorm/: prd.md  task.json
.trellis/tasks/archive/2026-04/04-26-sharpen-text-resolution/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-04/04-26-spread-view/: check.jsonl  task.json
.trellis/workspace/EthanWang/: index.md  journal-1.md
benches/: page_turn.rs
src/: error.rs  format.rs  layout.rs  lib.rs  main.rs  persistence.rs  test_support.rs  ui.rs
src/format/: epub.rs  mod.rs
src/layout/: mod.rs  paginate.rs  parse.rs  style.rs
src/ui/: mod.rs  reader.rs  recents.rs  render.rs  worker.rs
tests/: layout_smoke.rs  layout_threading.rs  lists_and_images.rs  open_epub.rs
