[package]
name = "reader-rs"
version = "0.1.0"
edition = "2024"

[features]
# Enables the `test_support` module that synthesises a fixture EPUB.
# Pulled in automatically by `dev-dependencies` so `cargo test` Just Works.
# Not part of the public surface — `#[doc(hidden)]` in `lib.rs`.
test-support = ["dep:zip"]

[dependencies]
iced = { version = "0.14", features = ["image", "tokio"] }
cosmic-text = "0.19"
epub = "2.1"
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
zip = { version = "3", default-features = false, features = ["deflate"], optional = true }
resvg = "0.47.0"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
# Force-enable `test-support` when building tests/benches.
reader-rs = { path = ".", features = ["test-support"] }

[[bench]]
name = "page_turn"
harness = false
